--- a/tela de login/style.css
+++ b/tela de login/style.css
@@ -6,7 +6,7 @@
 
 body, html {
   width: 100%;
-  height: 100%;
+  height: auto;
   overflow: auto; /* Permitir o scroll */
 }
 
@@ -43,15 +43,22 @@ body, html {
 }
 
 .titulo {
+  font-size: 24px;
   font-family: "Poppins", sans-serif;
-  font-size: px;
-  color: rgb(255, 255, 255);
+  color: white;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  display: block;
+  margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
 }
 
-.logo {
+.logo img{
   height: 100px;
 }
 
